Add ubi criu portable test - Add ubi criu portable test
Signed-off-by: Longyu Zhang <longyu.zhang@ibm.com>